--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   <div class="container">
     <div class="h4 text-center mb-4 title">Habilidades Profesionales</div>
     <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-      <div class="card-body">
+      <div class="card-body-contact">
         <ul>
           <li>Python</li>
           <li>HTML</li>
@@ -205,7 +205,7 @@
                   <figure class="cc-effect"><img src="images/project-2.png" alt="Image"/>
                     <figcaption>
                       <div class="h4">Control Supervisorio para Sistemas <br> Híbridos de Generación de Energía Renovable</div>
-                      <p>Matlab • Simulink </p>
+                      <p>Matlab • Simulink <br> Proyecto de Grado </p>
                     </figcaption>
                   </figure><!--</a>--></div>
             </div>
@@ -321,7 +321,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Desarrollo de E-commerce</div>
-            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+            <p>Actualmente me encuentro desarrollando una e-commerce para una empresa de venta de frutas y verduras, dicha empresa se encuentra localizada en Bogotá, Colombia. Las tecnologías utilizadas para poner en marcha <br> la tienda han sido Wordpress, Woocommerce, Mercado Pago como pasarela de pagos. </p>
           </div>
         </div>
       </div>
@@ -337,7 +337,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Asistente de Profesor Universitario (Preparador)</div>
-            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+            <p> Finalizando la carrera ocupé el cargo de asistente de profesor universitario en algunas materias relacionadas al área de Control y Automatización. Fui preparadora en materias como: Modelado de Sistemas Físicos, Identificación de Sistemas, Instrumentación. </p>
           </div>
         </div>
       </div>
@@ -375,7 +375,7 @@
           <div class="card-body">
             <div class="h5">Ingeniería de Sistemas</div>
             <p class="category">Universidad de Los Andes</p>
-            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+            <p>Estudié Ingeniería de Sistemas en una reconocida Universidad de Venezuela, la Universidad de Los Andes (ULA). En el ciclo básico de la carrera cursé materias como: cálculo, física, química, programación, análisis y diseño de algoritmos, modelado de sistemas físicos, modelado y simulación. En el ciclo profesional, elegí como opción la rama de Control y Automatización, por lo que cursé materias como: control, automatización, instrumentación, microprocesadores, identificación de sistemas, señales y sistemas.</p>
           </div>
         </div>
       </div>
@@ -475,7 +475,7 @@
               <div class="h4 text-center title">Contáctame</div>
               <div class="row">
                 <div class="col-md-12">
-                  <div class="card-body">
+                  <div class="card-body-contact">
                     <form id="contact-form" action="https://formspree.io/m.danielabap@gmail.com" method="POST">
                       <div class="p pb-3"><strong>Feel free to contact me </strong></div>
                       <div class="row mb-3">
