about me and contact

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="card-body">
             <div class="h4 mt-0 title">Sobre mí</div>
             <p>¡Hola! Soy María Daniela, soy Ingeniero de Sistemas egresada de la Universidad de Los Andes, Venezuela.</p>
-            <p>Creative CV is a HTML resume template for professionals. Built with Bootstrap 4, Now UI Kit and FontAwesome, this modern and responsive design template is perfect to showcase your portfolio, skills and experience.</p>
+            <p>Me considero una persona organizada, responsable y proactiva. Me gusta participar en nuevos proyectos y estoy siempre dispuesta a aprender cosas nuevas. Soy capaz de adaptarme a cualquier circunstancia y dar siempre lo mejor de mí en cualquier proyecto. </p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
@@ -121,7 +121,8 @@
           <li>Maple</li>
           <li>Simulink</li>
           <li>Proteus</li>
-          <li>MS Office</li>
+          <li>Vensim</li>
+          <li>Arduino</li>
         </ul><!--
         <div class="row">
           <div class="col-md-6">
@@ -477,7 +478,7 @@
                 <div class="col-md-12">
                   <div class="card-body-contact">
                     <form id="contact-form" action="https://formspree.io/m.danielabap@gmail.com" method="POST">
-                      <div class="p pb-3"><strong>Feel free to contact me </strong></div>
+                      <div class="p pb-3"><strong>Llena el siguiente formulario y ponte en contacto conmigo </strong></div>
                       <div class="row mb-3">
                         <div class="col">
                           <div class="input-group"><span class="input-group-addon"><i class="fa fa-user-circle"></i></span>
