--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
       <div class="container text-center"><a class="cc-linkedin btn btn-link" href="https://www.linkedin.com/in/baptista-daniela" target="_blank"><i class="fa fa-linkedin fa-2x " aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="https://www.instagram.com/dani.baptista/" target="_blank"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
       <div class="h4 title text-center">María Daniela Baptista Theuerkauf</div>
       <div class="text-center text-muted">
-        <p>&copy; Creative CV. All rights reserved.<br>Design - <a class="credit" href="https://templateflip.com" target="_blank">TemplateFlip</a></p>
+        <p>&copy; Creative CV. All rights reserved.<!--<br>Design - <a class="credit" href="https://templateflip.com" target="_blank">TemplateFlip</a>--></p>
       </div>
     </footer>
     <script src="js/core/jquery.3.2.1.min.js?ver=1.1.0"></script>
