--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
               <div class="row">
                 <div class="col-md-12">
                   <div class="card-body-contact">
-                    <form id="contact-form" action="https://formspree.io/m.danielabap@gmail.com" method="POST">
+                    <form id="contact-form" action="https://formspree.io/f/mzboporp" method="POST">
                       <div class="p pb-3"><strong>Llena el siguiente formulario y ponte en contacto conmigo </strong></div>
                       <div class="row mb-3">
                         <div class="col">
