setup contact form

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
               <div class="col-sm-4"><strong class="text-uppercase">Edad:</strong></div>
               <div class="col-sm-8">27</div>
             </div>-->
-            <div class="row mt-3">
+           <!-- <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
-              <div class="col-sm-8">m.danielabap@gmail.com</div>
-            </div>
+              <div class="col-sm-8">@gmail.com</div>
+            </div>-->
             <!--<div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
               <div class="col-sm-8">+1718-111-0011</div>
@@ -522,7 +522,6 @@
                     <p class="mb-0"><strong>Phone</strong></p>
                     <p class="pb-2">+1718-111-0011</p>
                     <p class="mb-0"><strong>Email</strong></p>
-                    <p>m.danielabap@gmail.com</p>-->
                   </div>
                 </div>
               </div>
