--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Desarrollo de E-commerce</div>
-            <p>Actualmente me encuentro desarrollando una e-commerce para una empresa de venta de frutas y verduras a domicilio, dicha empresa se encuentra localizada en Bogotá, Colombia. Las tecnologías utilizadas para poner en marcha <br> la tienda han sido Wordpress, Woocommerce, Mercado Pago como pasarela de pagos. </p>
+            <p>Actualmente me encuentro desarrollando una e-commerce para una empresa de venta de frutas y verduras a domicilio, dicha empresa se encuentra localizada en Bogotá, Colombia. Las tecnologías utilizadas para poner en marcha la tienda han sido Wordpress, Woocommerce, Mercado Pago como pasarela de pagos. </p>
           </div>
         </div>
       </div>
