--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="content-center">
          <!-- <div class="cc-profile-image"><a href="#"><img src="images/anthony.jpg" alt="Image"/></a></div>-->
           <div class="h2 title">María Daniela Baptista Theuerkauf</div>
-          <p class="category text-white">Ingeniero de Sistemas</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contáctame</a><a class="btn btn-primary" href="/images/mdbt_cv.pdf" download="cv-DanielaBaptista" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Descarga mi CV</a>
+          <p class="category text-white">Ingeniero de Sistemas</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contáctame</a><a class="btn btn-primary" href="/images/DanielaBaptista_CV.pdf" download="cv-DanielaBaptista" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Descarga mi CV</a>
         </div>
       </div>
       <div class="section">
