--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Idiomas:</strong></div>
-              <div class="col-sm-8" id="no-bullet-list"><ul> <li>Español (Nativo)</li> <li>Inglés (Intermedio)</li><li>Alemán (Principiante)</li></ul></div>
+              <div class="col-sm-8" id="no-bullet-list"><ul> <li>Español (Nativo)</li> <li>Inglés (Fluido)</li><li>Alemán (Principiante)</li></ul></div>
             </div>
           </div>
         </div>
