--- a/index.html
+++ b/index.html
@@ -379,8 +379,63 @@
             <p>Estudié Ingeniería de Sistemas en una reconocida Universidad de Venezuela, la Universidad de Los Andes (ULA). En el ciclo básico de la carrera cursé materias como: cálculo, física, química, programación, análisis y diseño de algoritmos, modelado de sistemas físicos, modelado y simulación. En el ciclo profesional, elegí como opción la rama de Control y Automatización, por lo que cursé materias como: control, automatización, instrumentación, microprocesadores, identificación de sistemas, señales y sistemas.</p>
           </div>
         </div>
+      </div>      
+    </div>
+<div class="lightbox"> <!--Gallery-->
+  <div class="multi-carousel">
+    <div class="multi-carousel-inner">
+      <div class="multi-carousel-item">
+        <img
+          src="https://mdbcdn.b-cdn.net/img/Photos/Thumbnails/Slides/1.webp"
+          data-mdb-img="https://mdbcdn.b-cdn.net/img/Photos/Slides/1.webp"
+          alt="Table Full of Spices"
+          class="w-100"
+        />
       </div>
-    </div><!--
+      <div class="multi-carousel-item">
+        <img
+          src="https://mdbcdn.b-cdn.net/img/Photos/Thumbnails/Slides/2.webp"
+          data-mdb-img="https://mdbcdn.b-cdn.net/img/Photos/Slides/2.webp"
+          alt="Winter Landscape"
+          class="w-100"
+        />
+      </div>
+      <div class="multi-carousel-item">
+        <img
+          src="https://mdbcdn.b-cdn.net/img/Photos/Thumbnails/Slides/3.webp"
+          data-mdb-img="https://mdbcdn.b-cdn.net/img/Photos/Slides/3.webp"
+          alt="View of the City in the Mountains"
+          class="w-100"
+        />
+      </div>
+      <div class="multi-carousel-item">
+        <img
+          src="https://mdbcdn.b-cdn.net/img/Photos/Thumbnails/Slides/4.webp"
+          data-mdb-img="https://mdbcdn.b-cdn.net/img/Photos/Slides/4.webp"
+          alt="Place Royale Bruxelles"
+          class="w-100"
+        />
+      </div>
+    </div>
+    <button
+      class="carousel-control-prev"
+      type="button"
+      tabindex="0"
+      data-mdb-slide="prev"
+    >
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    </button>
+    <button
+      class="carousel-control-next"
+      type="button"
+      tabindex="0"
+      data-mdb-slide="next"
+    >
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    </button>
+  </div>
+</div>
+    <!--
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
