--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
             </div>
             <div class="collapse navbar-collapse justify-content-end" id="navigation">
               <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">Sobre mí</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="#skills">Habilidades</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Portafolio</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experiencia</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contacto</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About me</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#skills">Skills</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
               </ul>
             </div>
           </div>
@@ -50,7 +50,7 @@
         <div class="content-center">
          <!-- <div class="cc-profile-image"><a href="#"><img src="images/anthony.jpg" alt="Image"/></a></div>-->
           <div class="h2 title">María Daniela Baptista Theuerkauf</div>
-          <p class="category text-white">Ingeniero de Sistemas</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contáctame</a><a class="btn btn-primary" href="/images/DanielaBaptista_CV.pdf" download="cv-DanielaBaptista" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Descarga mi CV</a>
+          <p class="category text-white">Systems Engineer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contáctame</a><a class="btn btn-primary" href="/images/DanielaBaptista_CV.pdf" download="cv-DanielaBaptista" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Descarga mi CV</a>
         </div>
       </div>
       <div class="section">
@@ -67,14 +67,14 @@
       <div class="row">
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
-            <div class="h4 mt-0 title">Sobre mí</div>
-            <p>¡Hola! Soy María Daniela, soy Ingeniero de Sistemas egresada de la Universidad de Los Andes, Venezuela.</p>
-            <p>Me considero una persona organizada, responsable y proactiva. Me gusta participar en nuevos proyectos y estoy siempre dispuesta a aprender cosas nuevas. Soy capaz de adaptarme a cualquier circunstancia y dar siempre lo mejor de mí en cualquier proyecto. </p>
+            <div class="h4 mt-0 title">About me</div>
+            <p>¡Hi! I'm María Daniela, I'm a Systems Engineer graduated from Universidad de Los Andes, Venezuela.</p>
+            <p>I consider myself an organized, responsible and proactive person. I like to participate in new projects and I 'm always willing to learn new things. I'm able to adapt to any circumstance and always give my best in any project. </p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
-            <div class="h4 mt-0 title">Información Básica</div>
+            <div class="h4 mt-0 title">Basic Information</div>
             <!--<div class="row">
               <div class="col-sm-4"><strong class="text-uppercase">Edad:</strong></div>
               <div class="col-sm-8">27</div>
@@ -88,12 +88,12 @@
               <div class="col-sm-8">+1718-111-0011</div>
             </div>-->
             <div class="row mt-3">
-              <div class="col-sm-4"><strong class="text-uppercase">Dirección:</strong></div>
-              <div class="col-sm-8">Mérida, Venezuela</div>
+              <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
+              <div class="col-sm-8">Tübingen, Germany</div>
             </div>
             <div class="row mt-3">
-              <div class="col-sm-4"><strong class="text-uppercase">Idiomas:</strong></div>
-              <div class="col-sm-8" id="no-bullet-list"><ul> <li>Español (Nativo)</li> <li>Inglés (Fluido)</li><li>Alemán (Principiante)</li></ul></div>
+              <div class="col-sm-4"><strong class="text-uppercase">Languages:</strong></div>
+              <div class="col-sm-8" id="no-bullet-list"><ul> <li>Spanish (Native)</li> <li>English (Fluent)</li><li>German (Basic)</li></ul></div>
             </div>
           </div>
         </div>
@@ -103,7 +103,7 @@
 </div>
 <div class="section" id="skills">
   <div class="container">
-    <div class="h4 text-center mb-4 title">Habilidades Profesionales</div>
+    <div class="h4 text-center mb-4 title">Professional Skills</div>
     <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
       <div class="card-body-contact">
         <ul>
@@ -180,11 +180,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 ml-auto mr-auto">
-        <div class="h4 text-center mb-4 title">Proyectos</div>
+        <div class="h4 text-center mb-4 title">Projects</div>
         <div class="nav-align-center">
           <ul class="nav nav-pills nav-pills-primary" role="tablist">
-            <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#web-development" role="tablist"><i class="fa fa-laptop" aria-hidden="true" title="Programación"></i></a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#graphic-design" role="tablist"><i class="fa fa-lightbulb-o" aria-hidden="true" title="Emprendimientos"></i></a></li>
+            <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#web-development" role="tablist"><i class="fa fa-laptop" aria-hidden="true" title="Programming"></i></a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#graphic-design" role="tablist"><i class="fa fa-lightbulb-o" aria-hidden="true" title="Others"></i></a></li>
            <!--<li class="nav-item"><a class="nav-link" data-toggle="tab" href="#Photography" role="tablist"><i class="fa fa-camera" aria-hidden="true"></i></a></li>
           </ul>-->
         </div>
@@ -205,8 +205,8 @@
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><!--<a href="#web-development">-->
                   <figure class="cc-effect"><img src="images/project-2.png" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Control Supervisorio para Sistemas <br> Híbridos de Generación de Energía Renovable</div>
-                      <p>Matlab • Simulink <br> Proyecto de Grado </p>
+                      <div class="h4">Supervisory Control Design of Hybrid <br> Renewable Energy Systems. </div>
+                      <p>Matlab • Simulink <br> Bachelor Thesis </p>
                     </figcaption>
                   </figure><!--</a>--></div>
             </div>
@@ -214,7 +214,7 @@
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><!--<a href="#web-development">-->
                   <figure class="cc-effect"><img src="images/project-3.png" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Mensajes Masivos Whatsapp</div>
+                      <div class="h4">Whatsapp Mass Messaging</div>
                       <p>Python • Selenium </p>
                     </figcaption>
                   </figure><!--</a>--></div><!--
@@ -236,8 +236,8 @@
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://www.instagram.com/la.casita.online/" target="_blank">
                   <figure class="cc-effect"><img src="images/graphic-design-1.png" alt="Image"/>
                     <figcaption>
-                      <div class="h4">La Casita Online</div>
-                      <p>Tienda Online de Cosas para el Hogar</p>
+                      <div class="h4">La Casita Online (Venezuela) </div>
+                      <p>Home Stuff Online Store</p>
                     </figcaption>
                   </figure></a></div><!--
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
@@ -252,8 +252,8 @@
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://linktr.ee/VentasBap" target="_blank">
                   <figure class="cc-effect"><img src="images/graphic-design-3.png" alt="Image"/>
                     <figcaption>
-                      <div class="h4">VentasBap</div>
-                      <p>Tienda Online de Ropa y Zapatos</p>
+                      <div class="h4">VentasBap (Venezuela)</div>
+                      <p>Online Clothing Store</p>
                     </figcaption>
                   </figure></a></div><!--
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
@@ -310,7 +310,7 @@
 </div>
 <div class="section" id="experience">
   <div class="container cc-experience">
-    <div class="h4 text-center mb-4 title">Experiencia</div>
+    <div class="h4 text-center mb-4 title">Experience</div>
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
@@ -321,8 +321,8 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Desarrollo de E-commerce</div>
-            <p>Actualmente me encuentro desarrollando una e-commerce para una empresa de venta de frutas y verduras a domicilio, dicha empresa se encuentra localizada en Bogotá, Colombia. Las tecnologías utilizadas para poner en marcha la tienda han sido Wordpress, Woocommerce, Mercado Pago como pasarela de pagos. </p>
+            <div class="h5">E-commerce Development</div>
+            <p>I developed an E‐Commerce using Woocommerce for a food wholesale company. This company is called Catabra and It’s located in Bogotá, Colombia.</p>
           </div>
         </div>
       </div>
@@ -331,14 +331,14 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>Febrero 2017 - Diciembre 2019</p>
+            <p>February 2017 - December 2019</p>
             <div class="h5">ULA</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Asistente de Profesor Universitario (Preparador)</div>
-            <p> Finalizando la carrera ocupé el cargo de asistente de profesor universitario en algunas materias relacionadas al área de Control y Automatización. Fui preparadora en materias como: Modelado de Sistemas Físicos, Identificación de Sistemas, Instrumentación. </p>
+            <div class="h5">University Teaching Assistant</div>
+            <p> At the end of my studies I worked as a university teaching assistant in some subjects related to the area of Control and Automation. I was a trainer in subjects such as: Modeling of Physical Systems, Systems Identification, Instrumentation. </p>
           </div>
         </div>
       </div>
@@ -363,20 +363,20 @@
 </div>
 <div class="section">
   <div class="container cc-education">
-    <div class="h4 text-center mb-4 title">Educación</div>
+    <div class="h4 text-center mb-4 title">Education</div>
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
             <p>2012 - 2019</p>
-            <div class="h5">Ingeniería</div>
+            <div class="h5">Engineering</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Ingeniería de Sistemas</div>
-            <p class="category">Universidad de Los Andes</p>
-            <p>Estudié Ingeniería de Sistemas en una reconocida Universidad de Venezuela, la Universidad de Los Andes (ULA). En el ciclo básico de la carrera cursé materias como: cálculo, física, química, programación, análisis y diseño de algoritmos, modelado de sistemas físicos, modelado y simulación. En el ciclo profesional, elegí como opción la rama de Control y Automatización, por lo que cursé materias como: control, automatización, instrumentación, microprocesadores, identificación de sistemas, señales y sistemas.</p>
+            <div class="h5">Systems Engineering</div>
+            <p class="category">Los Andes University</p>
+            <p>I studied Systems Engineering at a renowned Venezuelan University, Universidad de Los Andes (ULA). In the basic cycle of the career I studied subjects such as: calculus, physics, chemistry, programming, analysis and design of algorithms, modeling of physical systems, modeling and simulation. In the professional cycle, I chose as an option the branch of Control and Automation, so I took subjects such as: control, automation, instrumentation, microprocessors, system identification, signals and systems.</p>
           </div>
         </div>
       </div>      
@@ -528,23 +528,23 @@
         <div class="row">
           <div class="col-md-9">
             <div class="card mb-0" data-aos="zoom-in">
-              <div class="h4 text-center title">Contáctame</div>
+              <div class="h4 text-center title">Contact me</div>
               <div class="row">
                 <div class="col-md-12">
                   <div class="card-body-contact">
                     <form id="contact-form" action="https://formspree.io/f/mzboporp" method="POST">
-                      <div class="p pb-3"><strong>Llena el siguiente formulario y ponte en contacto conmigo </strong></div>
+                      <div class="p pb-3"><strong>Fill in the following form and contact me </strong></div>
                       <div class="row mb-3">
                         <div class="col">
                           <div class="input-group"><span class="input-group-addon"><i class="fa fa-user-circle"></i></span>
-                            <input class="form-control" type="text" name="name" placeholder="Nombre" required="required"/>
+                            <input class="form-control" type="text" name="name" placeholder="Name" required="required"/>
                           </div>
                         </div>
                       </div>
                       <div class="row mb-3">
                         <div class="col">
                           <div class="input-group"><span class="input-group-addon"><i class="fa fa-file-text"></i></span>
-                            <input class="form-control" type="text" name="Subject" placeholder="Asunto" required="required"/>
+                            <input class="form-control" type="text" name="Subject" placeholder="Subject" required="required"/>
                           </div>
                         </div>
                       </div>
@@ -558,7 +558,7 @@
                       <div class="row mb-3">
                         <div class="col">
                           <div class="form-group">
-                            <textarea class="form-control" name="message" placeholder="Tu mensaje" required="required"></textarea>
+                            <textarea class="form-control" name="message" placeholder="Your message" required="required"></textarea>
                           </div>
                         </div>
                       </div>
@@ -572,8 +572,8 @@
                 </div>
                <!--<div class="col-md-6">
                   <div class="card-body">
-                    <p class="mb-0"><strong>Dirección </strong></p>
-                    <p class="pb-2">Mérida, Venezuela</p>
+                    <p class="mb-0"><strong>Adress </strong></p>
+                    <p class="pb-2">Tübingen, Germany</p>
                     <p class="mb-0"><strong>Phone</strong></p>
                     <p class="pb-2">+1718-111-0011</p>
                     <p class="mb-0"><strong>Email</strong></p>
