--- a/index.html
+++ b/index.html
@@ -417,7 +417,61 @@
       </div>
     </div>-->
   </div>
-</div><!--
+</div>
+<div class="section" id="portfolio">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 ml-auto mr-auto">
+        <div class="h4 text-center mb-4 title">Projects</div>
+        <div class="nav-align-center">
+          <ul class="nav nav-pills nav-pills-primary" role="tablist">
+            <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#web-development" role="tablist"><i class="fa fa-laptop" aria-hidden="true" title="Courses"></i></a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#graphic-design" role="tablist"><i class="fa fa-lightbulb-o" aria-hidden="true" title="Others"></i></a></li>
+           <!--<li class="nav-item"><a class="nav-link" data-toggle="tab" href="#Photography" role="tablist"><i class="fa fa-camera" aria-hidden="true"></i></a></li>
+          </ul>-->
+        </div>
+      </div>
+    </div>
+    <div class="tab-content gallery mt-5">
+      <div class="tab-pane active" id="web-development">
+        <div class="ml-auto mr-auto">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                  <figure class="cc-effect"><img src="images/course-1.png" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">Python 3. Learning from Scratch</div>
+                      <p>Python</p>
+                    </figcaption>
+                  </figure></div>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><!--<a href="#web-development">-->
+                  <figure class="cc-effect"><img src="images/course-2.png" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">Introducing Coding for Beginners: <br> an HTML and Css Course. </div>
+                      <p>HTML and CSS </p>
+                    </figcaption>
+                  </figure><!--</a>--></div>
+            </div>
+            <div class="col-md-6">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><!--<a href="#web-development">-->
+                  <figure class="cc-effect"><img src="images/project-3.png" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">Whatsapp Mass Messaging</div>
+                      <p>Python • Selenium </p>
+                    </figcaption>
+                  </figure><!--</a>--></div><!--
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
+                  <figure class="cc-effect"><img src="images/project-4.jpg" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">Web Advertising Project</div>
+                      <p>Web Development</p>
+                    </figcaption>
+                  </figure></a></div>-->
+            </div>
+          </div>
+        </div>
+      </div>  
+<!--
 <div class="section" id="reference">
   <div class="container cc-reference">
     <div class="h4 mb-4 text-center title">References</div>
