--- a/index.html
+++ b/index.html
@@ -447,23 +447,23 @@
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><!--<a href="#web-development">-->
                   <figure class="cc-effect"><img src="images/course-2.png" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Introducing Coding for Beginners: <br> an HTML and Css Course. </div>
+                      <div class="h4">Introducing Coding for Beginners: <br> an HTML and CSS Course. </div>
                       <p>HTML and CSS </p>
                     </figcaption>
                   </figure><!--</a>--></div>
             </div>
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><!--<a href="#web-development">-->
-                  <figure class="cc-effect"><img src="images/project-3.png" alt="Image"/>
+                  <figure class="cc-effect"><img src="images/course-3.png" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Whatsapp Mass Messaging</div>
-                      <p>Python • Selenium </p>
+                      <div class="h4">Learning SCRUM</div>
+                      <p>SCRUM</p>
                     </figcaption>
                   </figure><!--</a>--></div><!--
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><img src="images/project-4.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="images/course-4.jpg" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Web Advertising Project</div>
+                      <div class="h4">Fundamentals of web development: Full Stack or Front-end</div>
                       <p>Web Development</p>
                     </figcaption>
                   </figure></a></div>-->
