--- a/index.html
+++ b/index.html
@@ -452,10 +452,10 @@
                     </figcaption>
                   </figure><!--</a>--></div>
                <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><!--<a href="#web-development">-->
-                  <figure class="cc-effect"><img src="images/course-2.png" alt="Image"/>
+                  <figure class="cc-effect"><img src="images/course-5.png" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Introducing Coding for Beginners: <br> an HTML and CSS Course. </div>
-                      <p>HTML and CSS </p>
+                      <div class="h4">Essential Javascript </div>
+                      <p>Javascript</p>
                     </figcaption>
                   </figure><!--</a>--></div>
             </div>
@@ -468,17 +468,17 @@
                     </figcaption>
                   </figure><!--</a>--></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><img src="images/course-4.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="images/course-4.png" alt="Image"/>
                     <figcaption>
                       <div class="h4">Fundamentals of web development: Full Stack or Front-end</div>
                       <p>Web Development</p>
                     </figcaption>
                   </figure><!--</a>--></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><img src="images/course-4.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="images/course-6.png" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Fundamentals of web development: Full Stack or Front-end</div>
-                      <p>Web Development</p>
+                      <div class="h4">Advanced JavaScript: Best Practices</div>
+                      <p>Javascript</p>
                     </figcaption>
                   </figure><!--</a>--></div>
             </div>
