--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
         <div class="h4 text-center mb-4 title">Courses</div>
         <div class="nav-align-center">
           <ul class="nav nav-pills nav-pills-primary" role="tablist">
-            <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#web-development" role="tablist"><i class="fa fa-laptop" aria-hidden="true" title="Courses"></i></a></li>
+           <!--<li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#web-development" role="tablist"><i class="fa fa-laptop" aria-hidden="true" title="Courses"></i></a></li>-->
            <!--<li class="nav-item"><a class="nav-link" data-toggle="tab" href="#graphic-design" role="tablist"><i class="fa fa-lightbulb-o" aria-hidden="true" title="Others"></i></a></li>-->
            <!--<li class="nav-item"><a class="nav-link" data-toggle="tab" href="#Photography" role="tablist"><i class="fa fa-camera" aria-hidden="true"></i></a></li>
           </ul>-->
@@ -470,7 +470,7 @@
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
                   <figure class="cc-effect"><img src="images/course-4.png" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Fundamentals of web development: Full Stack or Front-end</div>
+                      <div class="h4">Fundamentals of web development: <br> Full Stack or Front-end</div>
                       <p>Web Development</p>
                     </figcaption>
                   </figure><!--</a>--></div>
